--- a/TA_CTIS_TAXII_ES_AR/globalConfig.json
+++ b/TA_CTIS_TAXII_ES_AR/globalConfig.json
@@ -120,7 +120,7 @@
     "meta": {
         "name": "TA_CTIS_TAXII_ES_AR",
         "restRoot": "TA_CTIS_TAXII_ES_AR",
-        "version": "0.0.0R51fd0b8",
+        "version": "0.0.0Rf6caf48",
         "displayName": "CTIS TAXII ES Adaptive Response Add-on",
         "schemaVersion": "0.0.7",
         "_uccVersion": "5.40.0"
