Populate new indicator form with query params from workflow action

--- a/TA_CTIS_TAXII_ES_AR/package/default/workflow_actions.conf
+++ b/TA_CTIS_TAXII_ES_AR/package/default/workflow_actions.conf
@@ -11,5 +11,5 @@ display_location = field_menu
 fields = *
 label = Stage IOC $@field_name$=$@field_value$ for submission
 link.method = get
-link.uri = /app/TA_CTIS_TAXII_ES_AR_2/configuration?field_name=$@field_name$&field_value=$@field_value$
+link.uri = /app/TA_CTIS_TAXII_ES_AR_2/new_indicator?splunkFieldName=$@field_name$&splunkFieldValue=$@field_value$
 type = link
