DateTime with timezone offset component. Add submit button to new indicator form

--- a/packages/my-react-component/package.json
+++ b/packages/my-react-component/package.json
@@ -20,6 +20,7 @@
   },
   "main": "MyReactComponent.js",
   "dependencies": {
+    "@splunk/moment": "^0.7.0",
     "@splunk/react-ui": "^4.30.0",
     "@splunk/themes": "^0.18.0"
   },
