--- a/packages/my-splunk-app/package.json
+++ b/packages/my-splunk-app/package.json
@@ -14,6 +14,7 @@
     "stylelint": "stylelint \"src/**/*.{js,jsx}\" --config stylelint.config.js"
   },
   "dependencies": {
+    "@splunk/moment": "^0.7.0",
     "prop-types": "^15.8.1",
     "uuid": "^10.0.0"
   },
