Start using react-hook-form to build out new indicator form validation

--- a/packages/my-splunk-app/package.json
+++ b/packages/my-splunk-app/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@splunk/moment": "^0.7.0",
     "prop-types": "^15.8.1",
+    "react-hook-form": "^7.52.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
