--- a/TA_CTIS_TAXII_ES_AR/globalConfig.json
+++ b/TA_CTIS_TAXII_ES_AR/globalConfig.json
@@ -120,7 +120,7 @@
     "meta": {
         "name": "TA_CTIS_TAXII_ES_AR",
         "restRoot": "TA_CTIS_TAXII_ES_AR",
-        "version": "0.0.0Rd0077e1",
+        "version": "0.0.0R51a00a5",
         "displayName": "CTIS TAXII ES Add-on",
         "schemaVersion": "0.0.7",
         "_uccVersion": "5.40.0"
