Start work on POST endpoint to suggest a STIX pattern for splunk field/value. Forms basis for other requests including setting up logger, fixing import path and handling JSON request payload.

--- a/TA_CTIS_TAXII_ES_AR/package/default/restmap.custom.conf
+++ b/TA_CTIS_TAXII_ES_AR/package/default/restmap.custom.conf
@@ -4,3 +4,11 @@ script                = rest_hello_world.py
 scripttype            = persist
 python.version        = python3
 handler               = rest_hello_world.HelloWorld
+
+[script:suggest-stix-pattern]
+match                 = /suggest-stix-pattern
+script                = rest_suggest_stix_pattern.py
+scripttype            = persist
+python.version        = python3
+handler               = rest_suggest_stix_pattern.SuggestStixPatternHandler
+passPayload = true
