--- a/TA_CTIS_TAXII_ES_AR/package/default/web.custom.conf
+++ b/TA_CTIS_TAXII_ES_AR/package/default/web.custom.conf
@@ -1,3 +1,7 @@
 [expose:hello-world]
 methods = GET
 pattern = say-hello
+
+[expose:suggest-stix-pattern]
+methods = POST
+pattern = suggest-stix-pattern
