Basic full-stack implementation of create-indicator endpoint (just dump payload to new collection record)

--- a/TA_CTIS_TAXII_ES_AR/package/default/restmap.custom.conf
+++ b/TA_CTIS_TAXII_ES_AR/package/default/restmap.custom.conf
@@ -12,3 +12,11 @@ scripttype            = persist
 python.version        = python3
 handler               = rest_suggest_stix_pattern.SuggestStixPatternHandler
 passPayload = true
+
+[script:create-indicator]
+match                 = /create-indicator
+script                = rest_create_indicator.py
+scripttype            = persist
+python.version        = python3
+handler               = rest_create_indicator.CreateIndicatorHandler
+passPayload = true
