--- a/TA_CTIS_TAXII_ES_AR/package/default/web.custom.conf
+++ b/TA_CTIS_TAXII_ES_AR/package/default/web.custom.conf
@@ -5,3 +5,7 @@ pattern = say-hello
 [expose:suggest-stix-pattern]
 methods = POST
 pattern = suggest-stix-pattern
+
+[expose:create-indicator]
+methods = POST
+pattern = create-indicator
