GET endpoint to query indicators collection. Fix bug with serializing key and user fields

--- a/TA_CTIS_TAXII_ES_AR/package/default/restmap.custom.conf
+++ b/TA_CTIS_TAXII_ES_AR/package/default/restmap.custom.conf
@@ -20,3 +20,10 @@ scripttype            = persist
 python.version        = python3
 handler               = rest_create_indicator.CreateIndicatorHandler
 passPayload = true
+
+[script:list-indicators]
+match                 = /list-indicators
+script                = rest_list_indicators.py
+scripttype            = persist
+python.version        = python3
+handler               = rest_list_indicators.ListIndicatorsHandler
