--- a/TA_CTIS_TAXII_ES_AR/package/default/web.custom.conf
+++ b/TA_CTIS_TAXII_ES_AR/package/default/web.custom.conf
@@ -9,3 +9,7 @@ pattern = suggest-stix-pattern
 [expose:create-indicator]
 methods = POST
 pattern = create-indicator
+
+[expose:list-indicators]
+methods = GET
+pattern = list-indicators
