--- a/packages/my-splunk-app/package.json
+++ b/packages/my-splunk-app/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@splunk/moment": "^0.7.0",
+    "@splunk/react-toast-notifications": "^0.11.3",
     "prop-types": "^15.8.1",
     "react-hook-form": "^7.52.1",
     "uuid": "^10.0.0"
