--- a/TA_CTIS_TAXII/package/default/restmap.custom.conf
+++ b/TA_CTIS_TAXII/package/default/restmap.custom.conf
@@ -27,3 +27,11 @@ script                = rest_list_indicators.py
 scripttype            = persist
 python.version        = python3
 handler               = rest_list_indicators.ListIndicatorsHandler
+
+[script:create-identity]
+match                 = /create-identity
+script                = rest_create_identity.py
+scripttype            = persist
+python.version        = python3
+handler               = rest_create_identity.CreateIdentityHandler
+passPayload = true
