--- a/TA_CTIS_TAXII/package/default/web.custom.conf
+++ b/TA_CTIS_TAXII/package/default/web.custom.conf
@@ -13,3 +13,7 @@ pattern = create-indicator
 [expose:list-indicators]
 methods = GET
 pattern = list-indicators
+
+[expose:create-identity]
+methods = POST
+pattern = create-identity
