List identities endpoint

--- a/TA_CTIS_TAXII/package/default/restmap.custom.conf
+++ b/TA_CTIS_TAXII/package/default/restmap.custom.conf
@@ -35,3 +35,10 @@ scripttype            = persist
 python.version        = python3
 handler               = rest_create_identity.CreateIdentityHandler
 passPayload = true
+
+[script:list-identities]
+match                 = /list-identities
+script                = rest_list_identities.py
+scripttype            = persist
+python.version        = python3
+handler               = rest_list_identities.ListIdentitiesHandler
