--- a/TA_CTIS_TAXII/package/default/web.custom.conf
+++ b/TA_CTIS_TAXII/package/default/web.custom.conf
@@ -17,3 +17,7 @@ pattern = list-indicators
 [expose:create-identity]
 methods = POST
 pattern = create-identity
+
+[expose:list-identities]
+methods = GET
+pattern = list-identities
