Endpoint to list available IoC Categories and optional suggestion

--- a/TA_CTIS_TAXII/package/default/web.custom.conf
+++ b/TA_CTIS_TAXII/package/default/web.custom.conf
@@ -21,3 +21,7 @@ pattern = create-identity
 [expose:list-identities]
 methods = GET
 pattern = list-identities
+
+[expose:list-ioc-categories]
+methods = GET
+pattern = list-ioc-categories
