--- a/TA_CTIS_TAXII/package/default/restmap.custom.conf
+++ b/TA_CTIS_TAXII/package/default/restmap.custom.conf
@@ -42,3 +42,10 @@ script                = rest_list_identities.py
 scripttype            = persist
 python.version        = python3
 handler               = rest_list_identities.ListIdentitiesHandler
+
+[script:list-ioc-categories]
+match                 = /list-ioc-categories
+script                = rest_list_indicator_categories.py
+scripttype            = persist
+python.version        = python3
+handler               = rest_list_indicator_categories.ListIndicatorCategoriesHandler
