Proof of concept: event-level workflow action passing Splunk event to indicator form

--- a/TA_CTIS_TAXII/package/default/workflow_actions.conf
+++ b/TA_CTIS_TAXII/package/default/workflow_actions.conf
@@ -6,11 +6,18 @@ link.method = get
 link.uri = http://www.google.com/search?q=$@field_value$
 type = link
 
-[ctis_taxii_submit_workflow]
+[ctis_taxii_submit_field_workflow]
 display_location = field_menu
 fields = *
-label = Stage IOC $@field_name$=$@field_value$ for submission
+label = CTIS: Add IoC $@field_name$=$@field_value$ to Grouping
 link.method = get
-; link.uri = /app/TA_CTIS_TAXII/new_indicator?splunkFieldName=$@field_name$&splunkFieldValue=$@field_value$&sid=$@sid$&offset=$@offset$&namespace=$@namespace$&latest_time=$@latest_time$
 link.uri = /app/TA_CTIS_TAXII/new_indicator?splunkFieldName=$@field_name$&splunkFieldValue=$@field_value$
+type = link
+
+[ctis_taxii_submit_event_workflow]
+display_location = event_menu
+fields = *
+label = CTIS: Add IOCs to Grouping
+link.method = get
+link.uri = /app/TA_CTIS_TAXII/new_indicator?sid=$@sid$&offset=$@offset$&namespace=$@namespace$&latest_time=$@latest_time$
 type = link
