edit-identity REST endpoint. TODO: extract reusable code into common lib

--- a/TA_CTIS_TAXII/package/default/restmap.custom.conf
+++ b/TA_CTIS_TAXII/package/default/restmap.custom.conf
@@ -36,6 +36,14 @@ python.version        = python3
 handler               = rest_create_identity.CreateIdentityHandler
 passPayload = true
 
+[script:edit-identity]
+match                 = /edit-identity
+script                = rest_edit_identity.py
+scripttype            = persist
+python.version        = python3
+handler               = rest_edit_identity.EditIdentityHandler
+passPayload = true
+
 [script:list-identities]
 match                 = /list-identities
 script                = rest_list_identities.py
