--- a/TA_CTIS_TAXII/package/default/web.custom.conf
+++ b/TA_CTIS_TAXII/package/default/web.custom.conf
@@ -18,6 +18,10 @@ pattern = list-indicators
 methods = POST
 pattern = create-identity
 
+[expose:edit-identity]
+methods = POST
+pattern = edit-identity
+
 [expose:list-identities]
 methods = GET
 pattern = list-identities
