feat: Delete identity

--- a/TA_CTIS_TAXII/package/default/restmap.custom.conf
+++ b/TA_CTIS_TAXII/package/default/restmap.custom.conf
@@ -44,6 +44,14 @@ python.version        = python3
 handler               = rest_edit_identity.EditIdentityHandler
 passPayload = true
 
+[script:delete-identity]
+match                 = /delete-identity
+script                = rest_delete_identity.py
+scripttype            = persist
+python.version        = python3
+handler               = rest_delete_identity.Handler
+passPayload = true
+
 [script:list-identities]
 match                 = /list-identities
 script                = rest_list_identities.py
