--- a/TA_CTIS_TAXII/package/default/web.custom.conf
+++ b/TA_CTIS_TAXII/package/default/web.custom.conf
@@ -22,6 +22,10 @@ pattern = create-identity
 methods = POST
 pattern = edit-identity
 
+[expose:delete-identity]
+methods = DELETE
+pattern = delete-identity
+
 [expose:list-identities]
 methods = GET
 pattern = list-identities
