feat: Create Grouping REST API

--- a/TA_CTIS_TAXII/package/default/restmap.custom.conf
+++ b/TA_CTIS_TAXII/package/default/restmap.custom.conf
@@ -65,3 +65,11 @@ script                = rest_list_indicator_categories.py
 scripttype            = persist
 python.version        = python3
 handler               = rest_list_indicator_categories.ListIndicatorCategoriesHandler
+
+[script:create-grouping]
+match                 = /create-grouping
+script                = rest_create_grouping.py
+scripttype            = persist
+python.version        = python3
+handler               = rest_create_grouping.Handler
+passPayload = true
