--- a/TA_CTIS_TAXII/package/default/web.custom.conf
+++ b/TA_CTIS_TAXII/package/default/web.custom.conf
@@ -33,3 +33,7 @@ pattern = list-identities
 [expose:list-ioc-categories]
 methods = GET
 pattern = list-ioc-categories
+
+[expose:create-grouping]
+methods = POST
+pattern = create-grouping
