feat: List Groupings REST API

--- a/TA_CTIS_TAXII/package/default/web.custom.conf
+++ b/TA_CTIS_TAXII/package/default/web.custom.conf
@@ -37,3 +37,7 @@ pattern = list-ioc-categories
 [expose:create-grouping]
 methods = POST
 pattern = create-grouping
+
+[expose:list-groupings]
+methods = GET
+pattern = list-groupings
