--- a/TA_CTIS_TAXII/package/default/restmap.custom.conf
+++ b/TA_CTIS_TAXII/package/default/restmap.custom.conf
@@ -73,3 +73,10 @@ scripttype            = persist
 python.version        = python3
 handler               = rest_create_grouping.Handler
 passPayload = true
+
+[script:list-identities]
+match                 = /list-groupings
+script                = rest_list_groupings.py
+scripttype            = persist
+python.version        = python3
+handler               = rest_list_groupings.Handler
