--- a/TA_CTIS_TAXII/package/default/restmap.custom.conf
+++ b/TA_CTIS_TAXII/package/default/restmap.custom.conf
@@ -74,9 +74,17 @@ python.version        = python3
 handler               = rest_create_grouping.Handler
 passPayload = true
 
-[script:list-identities]
+[script:list-groupings]
 match                 = /list-groupings
 script                = rest_list_groupings.py
 scripttype            = persist
 python.version        = python3
 handler               = rest_list_groupings.Handler
+
+[script:edit-grouping]
+match                 = /edit-grouping
+script                = rest_edit_grouping.py
+scripttype            = persist
+python.version        = python3
+handler               = rest_edit_grouping.Handler
+passPayload = true
