--- a/TA_CTIS_TAXII/package/default/web.custom.conf
+++ b/TA_CTIS_TAXII/package/default/web.custom.conf
@@ -41,3 +41,7 @@ pattern = create-grouping
 [expose:list-groupings]
 methods = GET
 pattern = list-groupings
+
+[expose:edit-grouping]
+methods = POST
+pattern = edit-grouping
