feat: Delete Grouping REST API

--- a/TA_CTIS_TAXII/package/default/restmap.custom.conf
+++ b/TA_CTIS_TAXII/package/default/restmap.custom.conf
@@ -88,3 +88,11 @@ scripttype            = persist
 python.version        = python3
 handler               = rest_edit_grouping.Handler
 passPayload = true
+
+[script:delete-grouping]
+match                 = /delete-grouping
+script                = rest_delete_grouping.py
+scripttype            = persist
+python.version        = python3
+handler               = rest_delete_grouping.Handler
+passPayload = true
