--- a/TA_CTIS_TAXII/package/default/web.custom.conf
+++ b/TA_CTIS_TAXII/package/default/web.custom.conf
@@ -45,3 +45,7 @@ pattern = list-groupings
 [expose:edit-grouping]
 methods = POST
 pattern = edit-grouping
+
+[expose:delete-grouping]
+methods = DELETE
+pattern = delete-grouping
