--- a/TA_CTIS_TAXII/package/default/workflow_actions.conf
+++ b/TA_CTIS_TAXII/package/default/workflow_actions.conf
@@ -11,7 +11,7 @@ display_location = field_menu
 fields = *
 label = CTIS: Add IoC $@field_name$=$@field_value$ to Grouping
 link.method = get
-link.uri = /app/TA_CTIS_TAXII/new_indicator?splunkFieldName=$@field_name$&splunkFieldValue=$@field_value$
+link.uri = /app/TA_CTIS_TAXII/new_indicator?splunkFieldName=$@field_name$&splunkFieldValue=$@field_value$&sid=$@sid$&offset=$@offset$&namespace=$@namespace$&latest_time=$@latest_time$
 type = link
 
 [ctis_taxii_submit_event_workflow]
