add splunk/react-icons package

--- a/packages/my-react-component/package.json
+++ b/packages/my-react-component/package.json
@@ -21,6 +21,7 @@
   "main": "MyReactComponent.js",
   "dependencies": {
     "@splunk/moment": "^0.7.0",
+    "@splunk/react-icons": "^4.7.0",
     "@splunk/react-toast-notifications": "^0.11.3",
     "@splunk/react-ui": "^4.30.0",
     "@splunk/themes": "^0.18.0"
