feat: REST API - Delete and Edit indicators

--- a/TA_CTIS_TAXII/package/default/restmap.custom.conf
+++ b/TA_CTIS_TAXII/package/default/restmap.custom.conf
@@ -28,6 +28,22 @@ scripttype            = persist
 python.version        = python3
 handler               = rest_list_indicators.ListIndicatorsHandler
 
+[script:edit-indicator]
+match                 = /edit-indicator
+script                = rest_edit_indicator.py
+scripttype            = persist
+python.version        = python3
+handler               = rest_edit_indicator.Handler
+passPayload = true
+
+[script:delete-indicator]
+match                 = /delete-indicator
+script                = rest_delete_indicator.py
+scripttype            = persist
+python.version        = python3
+handler               = rest_delete_indicator.Handler
+passPayload = true
+
 [script:create-identity]
 match                 = /create-identity
 script                = rest_create_identity.py
