--- a/TA_CTIS_TAXII/package/default/web.custom.conf
+++ b/TA_CTIS_TAXII/package/default/web.custom.conf
@@ -14,6 +14,14 @@ pattern = create-indicator
 methods = GET
 pattern = list-indicators
 
+[expose:edit-indicator]
+methods = POST
+pattern = edit-indicator
+
+[expose:delete-indicator]
+methods = DELETE
+pattern = delete-indicator
+
 [expose:create-identity]
 methods = POST
 pattern = create-identity
