--- a/packages/my-splunk-app/package.json
+++ b/packages/my-splunk-app/package.json
@@ -18,6 +18,7 @@
     "@splunk/react-toast-notifications": "^0.11.3",
     "prop-types": "^15.8.1",
     "react-hook-form": "^7.53.0",
+    "react-responsive": "^10.0.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
