--- a/TA_CTIS_TAXII/globalConfig.json
+++ b/TA_CTIS_TAXII/globalConfig.json
@@ -120,9 +120,12 @@
     "meta": {
         "name": "TA_CTIS_TAXII",
         "restRoot": "TA_CTIS_TAXII",
-        "version": "0.0.0R00372fd",
+        "version": "0.0.0Race3fd9",
         "displayName": "CTIS TAXII ES Add-on",
         "schemaVersion": "0.0.7",
-        "_uccVersion": "5.47.0"
+        "_uccVersion": "5.49.0",
+        "supportedThemes": [
+            "dark"
+        ]
     }
 }
