--- a/packages/my-react-component/package.json
+++ b/packages/my-react-component/package.json
@@ -26,6 +26,7 @@
     "@splunk/react-ui": "^4.30.0",
     "@splunk/themes": "^0.18.0",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "react-responsive": "^10.0.0"
   },
   "devDependencies": {
