feat: Endpoint to list TAXII collections for a given TAXII config

--- a/TA_CTIS_TAXII/package/default/web.custom.conf
+++ b/TA_CTIS_TAXII/package/default/web.custom.conf
@@ -57,3 +57,7 @@ pattern = edit-grouping
 [expose:delete-grouping]
 methods = DELETE
 pattern = delete-grouping
+
+[expose:list-taxii-collections]
+methods = GET
+pattern = list-taxii-collections
