--- a/TA_CTIS_TAXII/package/default/restmap.custom.conf
+++ b/TA_CTIS_TAXII/package/default/restmap.custom.conf
@@ -112,3 +112,10 @@ scripttype            = persist
 python.version        = python3
 handler               = rest_delete_grouping.Handler
 passPayload = true
+
+[script:list-taxii-collections]
+match                 = /list-taxii-collections
+script                = rest_list_taxii_collections.py
+scripttype            = persist
+python.version        = python3
+handler               = rest_list_taxii_collections.Handler
