feat: Endpoint to Generate STIX Bundle JSON for grouping of indicators

--- a/TA_CTIS_TAXII/package/default/web.custom.conf
+++ b/TA_CTIS_TAXII/package/default/web.custom.conf
@@ -61,3 +61,7 @@ pattern = delete-grouping
 [expose:list-taxii-collections]
 methods = GET
 pattern = list-taxii-collections
+
+[expose:get-stix-bundle-for-grouping]
+methods = GET
+pattern = get-stix-bundle-for-grouping
