--- a/TA_CTIS_TAXII/package/default/restmap.custom.conf
+++ b/TA_CTIS_TAXII/package/default/restmap.custom.conf
@@ -119,3 +119,10 @@ script                = rest_list_taxii_collections.py
 scripttype            = persist
 python.version        = python3
 handler               = rest_list_taxii_collections.Handler
+
+[script:get-stix-bundle-for-grouping]
+match                 = /get-stix-bundle-for-grouping
+script                = rest_get_stix_bundle_for_grouping.py
+scripttype            = persist
+python.version        = python3
+handler               = rest_get_stix_bundle_for_grouping.Handler
