feat: Endpoint to submit grouping now. TODO: implement scheduled submission. feat: new submissions table, un-embed submission model from grouping

--- a/TA_CTIS_TAXII/package/default/restmap.custom.conf
+++ b/TA_CTIS_TAXII/package/default/restmap.custom.conf
@@ -126,3 +126,11 @@ script                = rest_get_stix_bundle_for_grouping.py
 scripttype            = persist
 python.version        = python3
 handler               = rest_get_stix_bundle_for_grouping.Handler
+
+[script:submit-grouping]
+match                 = /submit-grouping
+script                = rest_submit_grouping.py
+scripttype            = persist
+python.version        = python3
+handler               = rest_submit_grouping.Handler
+passPayload = true
