--- a/TA_CTIS_TAXII/package/default/web.custom.conf
+++ b/TA_CTIS_TAXII/package/default/web.custom.conf
@@ -65,3 +65,7 @@ pattern = list-taxii-collections
 [expose:get-stix-bundle-for-grouping]
 methods = GET
 pattern = get-stix-bundle-for-grouping
+
+[expose:submit-grouping]
+methods = POST
+pattern = submit-grouping
