feat: Endpoint to list submissions

--- a/TA_CTIS_TAXII/package/default/web.custom.conf
+++ b/TA_CTIS_TAXII/package/default/web.custom.conf
@@ -69,3 +69,7 @@ pattern = get-stix-bundle-for-grouping
 [expose:submit-grouping]
 methods = POST
 pattern = submit-grouping
+
+[expose:list-submissions]
+methods = GET
+pattern = list-submissions
