--- a/TA_CTIS_TAXII/package/default/restmap.custom.conf
+++ b/TA_CTIS_TAXII/package/default/restmap.custom.conf
@@ -134,3 +134,10 @@ scripttype            = persist
 python.version        = python3
 handler               = rest_submit_grouping.Handler
 passPayload = true
+
+[script:list-submissions]
+match                 = /list-submissions
+script                = rest_list_submissions.py
+scripttype            = persist
+python.version        = python3
+handler               = rest_list_submissions.Handler
