feat: Endpoint to unschedule submission

--- a/TA_CTIS_TAXII/package/default/restmap.custom.conf
+++ b/TA_CTIS_TAXII/package/default/restmap.custom.conf
@@ -135,6 +135,14 @@ python.version        = python3
 handler               = rest_submit_grouping.Handler
 passPayload = true
 
+[script:unschedule-submission]
+match                 = /unschedule-submission
+script                = rest_unschedule_submission.py
+scripttype            = persist
+python.version        = python3
+handler               = rest_unschedule_submission.Handler
+passPayload = true
+
 [script:list-submissions]
 match                 = /list-submissions
 script                = rest_list_submissions.py
