--- a/TA_CTIS_TAXII/package/default/web.custom.conf
+++ b/TA_CTIS_TAXII/package/default/web.custom.conf
@@ -73,3 +73,7 @@ pattern = submit-grouping
 [expose:list-submissions]
 methods = GET
 pattern = list-submissions
+
+[expose:unschedule-submission]
+methods = POST
+pattern = unschedule-submission
