fix: Bug with extracting error message for field when using field array. WARNING: contains debugging stuff and has bug with usage of useFieldArray. Deletion of an array record can persist errors of that record upon submission. TODO: find workaround.

--- a/packages/my-splunk-app/package.json
+++ b/packages/my-splunk-app/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "license": "UNLICENSED",
   "scripts": {
-    "build": "yarn run eslint && node bin/build.js build",
+    "build": "yarn run eslint; node bin/build.js build",
     "eslint": "eslint src --ext \".js,.jsx\"",
     "eslint:ci": "yarn run eslint -f junit -o test-reports/lint-results.xml",
     "eslint:fix": "eslint src --ext \".js, .jsx\" --fix",
