--- a/.github/workflows/docker-hello-world.yml
+++ b/.github/workflows/docker-hello-world.yml
@@ -18,7 +18,6 @@ jobs:
       run: pwd && ls -l
     - name: Install UCC
       run: pip install splunk-add-on-ucc-framework && pip freeze
-    
-    - name: Docker Hello World
-      run: docker run hello-world
+    - name: Spin up Splunk docker
+      run: cd integration_test && ./full-build.sh
       
