--- a/.github/workflows/docker-hello-world.yml
+++ b/.github/workflows/docker-hello-world.yml
@@ -19,5 +19,5 @@ jobs:
     - name: Install UCC
       run: pip install splunk-add-on-ucc-framework && pip freeze
     - name: Spin up Splunk docker
-      run: cd integration_test && ./full-build.sh
+      run: cd integration_test && ./spin-up-docker-splunk.sh
       
