fix(package): Debugging build script with upterm ssh

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -30,6 +30,10 @@ jobs:
       run: pwd && yarn setup
     - name: Package App
       run: cd integration_test && ./package.sh
+    - name: Setup upterm session
+      uses: lhotari/action-upterm@v1
+      with:
+          limit-access-to-actor: true
     - uses: actions/upload-artifact@v4
       with:
         path: integration_test/ctis.tar.gz
