feat(package): Separate package job from release

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -6,7 +6,7 @@
       "@semantic-release/github",
       {
         "assets": [
-          { "path": "integration_test/ctis.tar.gz", "label": "App Build" }
+          { "path": "ctis.tar.gz", "label": "App Build" }
         ]
       }
     ]
