--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  package:
     runs-on: ubuntu-latest
     permissions:
         contents: write # to be able to publish a GitHub release
@@ -30,8 +30,27 @@ jobs:
       run: pwd && yarn setup
     - name: Package App
       run: cd integration_test && ./package.sh
-    - name: Release
-      env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: npx semantic-release
+    - name: Upload app artifact
+      uses: actions/upload-artifact@v4
+      with:
+        path: integration_test/ctis.tar.gz
+        name: app
+
+  release:
+      runs-on: ubuntu-latest
+      needs: [package]
+      permissions:
+          contents: write # to be able to publish a GitHub release
+          issues: write # to be able to comment on released issues
+          pull-requests: write # to be able to comment on released pull requests
+          id-token: write # to enable use of OIDC for npm provenance
+      steps:
+          - name: Download app artifact
+            uses: actions/download-artifact@v4
+            with:
+                name: app
+          - name: Release
+            env:
+                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            run: npx semantic-release
 
