feat(package): WIP on integration-test job fix: README

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -68,9 +68,15 @@ jobs:
             uses: actions/download-artifact@v4
             with:
                 name: app
+                path: integration_test
           - name: list
             run: pwd && ls -l
-          - name: Setup upterm session
-            uses: lhotari/action-upterm@v1
-            with:
-                limit-access-to-actor: true
+          - name: Spin up Docker Splunk with app
+            run: cd integration_test && ./spin-up-docker-splunk.sh
+            env:
+                SPLUNK_PASSWORD: ${{ secrets.SPLUNK_PASSWORD }}
+                SPLUNK_APP_FILENAME: ctis.tar.gz
+#          - name: Setup upterm session
+#            uses: lhotari/action-upterm@v1
+#            with:
+#                limit-access-to-actor: true
